# strangen

./: .gitignore  CMakeLists.txt  README.md  bake.sh  bugs.md  clang.sh  gcc.sh  snacks.sh  stlab.sh
bake/: strangen
dogs/: BAKE.md  BUILD.md  HOW-TO-MCP.md  SERPENT.md  TODO.md  quote.txt
sauce/: CMakeLists.txt
sauce/common/: strange__common.h
sauce/enstrange/: strange__enstrange.cpp
sauce/example/: example__space_definition.h  example__space_transformation_1.h  example__space_transformation_2.cpp  example__space_transformation_3.h  example__type_erasure.h  example__type_erasure_main.cpp  strange__type_erasure.h  strange__type_erasure_main.cpp  transform.sh
sauce/generation/: CMakeLists.txt  build.sh  strange__generation.cpp
sauce/mcp/: strange__mcp.cpp
sauce/strange/: strange.h
sauce/strange/common/: strange__common.h  strange__hash.h
sauce/strange/comprehension/: parser.h  strange__comprehension__parser.h  strange__comprehension__toker.h  token.h
sauce/strange/definition/: strange__abstraction.h  strange__definition__abstraction.h  strange__definition__operation.h  strange__definition__parameter.h  strange__definition__space.h  strange__operation.h  strange__parameter.h  strange__space.h
sauce/strange/definition/implementation/: strange__abstraction.h  strange__operation.h
sauce/strange/implementation/baggage/: strange__implementation__baggage.h
sauce/strange/implementation/graph/: strange__implementation__graph.h  strange__implementation__thru_processor.h
sauce/strange/implementation/vector/: strange__implementation__vector.h
sauce/strange/meta/: a.out  clang.sh  strange__space_definition.h  strange__space_meta.cpp  strange__space_meta.h  strange__space_prototype.h  strange__transformation.h  transform.sh
sauce/strange/reflection/: strange__reflection.h
sauce/strange/space/: strange__space.h
sauce/strange/transformation/: strange__transformation.h
snacks/: CMakeLists.txt
snacks/baggage/: baggage__main.cpp
snacks/bananas/: bananas__main.cpp  bananas__space.h  bananas__space_prototype.h
snacks/cabbage/: cabbage__main.cpp
snacks/currants/: currants__main.cpp
snacks/demo/: demo__main.cpp  demo__space.h  demo__space_prototype.h
snacks/example/: example__space_transformation_3.h  example__type_erasure_main.cpp
snacks/toast/: toast__parser_input.h  toast__space_definition.h  toast__space_transformation_1.h  toast__space_transformation_2.cpp  toast__space_transformation_3.h  toast__type_erasure.h  toast__type_erasure_main.cpp
taste/: CMakeLists.txt
taste/baggage/: baggage__main.cpp  bake.sh  clang.sh
taste/currant/: bake.sh  clang.sh  currant__main.cpp  stlab.sh
taste/currants/: bake.sh  clang.sh  currants__main.cpp  stlab.sh
taste/demo/: clang.sh  demo__main.cpp  demo__space.h  demo__space_meta.cpp  demo__space_meta.h  demo__space_prototype.h  transform.sh
taste/example/: a.out  clang.sh  example__parser_input.h  example__space_definition.h  example__space_transformation_1.h  example__space_transformation_2.cpp  example__space_transformation_3.h  example__type_erasure.h  example__type_erasure_main.cpp  tokens.h  transform.sh
taste/strange/: taste__main.cpp
taste/strange/common/: taste__hash.cpp
taste/strange/comprehension/: taste__comprehension.cpp
taste/strange/implementation/baggage/: taste__baggage.cpp  taste__baggage_main.cpp  test_baggage
taste/strange/implementation/graph/: taste__graph.cpp
taste/strange/reflection/: taste__reflection.cpp
taste/strange/space/: taste__space.cpp  taste__vector.cpp
tastes/: CMakeLists.txt  clang.sh  run_all.sh  run_all_clang.sh  run_all_gcc.sh  run_tests.sh  tastes__main.cpp
tastes/baggage/: clang.sh  run_tests.sh  tastes__baggage_main.cpp
tastes/common/: tastes__common.cpp
tastes/comprehension/: tastes__comprehension.cpp
tastes/currants/: clang.sh  run_tests.sh  tastes__currants_main.cpp
tastes/space/: tastes__abstraction.cpp  tastes__operation.cpp  tastes__parameter.cpp  tastes__token.cpp
tastes/strange/: clang.sh  run_tests.sh  taste__main.cpp  tastes__main.cpp  test_clang  test_gcc
tastes/strange/common/: taste__common.cpp
tastes/strange/comprehension/: taste__comprehension.cpp
tastes/strange/implementation/baggage/: clang.sh  run_tests.sh  tastes__baggage_main.cpp  test_baggage_clang
tastes/strange/implementation/graph/: clang.sh  run_tests.sh  taste__currants_main.cpp  taste__graph.cpp  taste__graph_main.cpp  tastes__currants_main.cpp
tastes/strange/reflection/: taste__reflection.cpp
tastes/strange/space/: taste__any.cpp  taste__parameter.cpp  tastes__operation.cpp
